[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenticrag"
version = "0.1.0"
description = "Agentic RAG CLI with LangGraph agents and shared memory"
authors = [{ name = "You" }]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
agenticrag = "agenticrag.cli:app"
